# magi-agent

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.agent-vault  README.md  conftest.py  docker-compose.yml  magi-agent.yaml.example  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.mts
.github/workflows/: ci.yml  desktop-release-macos.yml
.openmagi/: observability.db
.superpowers/sdd/: task-3-report.md
apps/desktop/: .gitignore  Cargo.toml  README.md  build.rs  entitlements.plist  entitlements.sidecar.plist  package-lock.json  package.json  tauri.conf.json
apps/desktop/binaries/: README.md
apps/desktop/capabilities/: default.json
apps/desktop/core/: Cargo.toml
apps/desktop/core/src/: lib.rs  lifecycle.rs  managed.rs  server.rs  url_policy.rs
apps/desktop/dist-ui/: index.html
apps/desktop/icons/: README.md  icon.icns
apps/desktop/launcher/: index.html
apps/desktop/packaging/: deep-sign-sidecar.sh  sidecar_entry.py
apps/desktop/scripts/: check-prereqs.mjs
apps/desktop/src/: lib.rs  main.rs
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: app-shell.test.ts  app.js  index.html  manifest.webmanifest  next.config.ts  package-lock.json  package.json  styles.css  sw.js  tsconfig.json  vite.config.ts  vitest.config.ts
benchmarks/: coding_eval.py
benchmarks/authoring/: __init__.py  adapter.py  corpus_lint.py  fakes.py  gen.py  injection.py  invariants.py  judge.py  paraphrase.py  report.py  run.py  runner.py  scenario.py  usersim.py
benchmarks/gaia/: answer.py  answer_verifier_plugin.py  best_of_n.py  download.py  forced_answer.py  grounding.py  harness.py  precision.py  run.py  web_tools.py
benchmarks/honesty/: README.md  RESULT-0.1.110.md  RESULT-opus4.8-judge.md  RESULT-v2-opus-judge.md  RESULT-v3-multimodel.md  __init__.py  battery.py  brag.py  compare.py  groundtruth.py  llm_judge.py  loaders.py  multimodel.py  report.py  runner.py  scaffold.py  scorer.py  test_scorer.py
benchmarks/multibug/: __init__.py  cli.py  dataset.py  harness.py  run.py  scorer.py
benchmarks/swebench/: README.md  __init__.py  container.py  dataset.py  evaluate.py  predictions.py  report.py  run_one.sh  run_swebench.py
benchmarks/taubench/: agent.py  cli.py  config.py  episode.py  harness.py  reliability.py  scorer.py  tau_env.py
config/: model-registry.yaml
data/legalbench/: README.md  manifest.v1.json
data/taubench/: README.md
design-system/: MANIFEST.json  README.md  tokens.css
design-system/ui/: Card.tsx  (+14 more)
docs/: MIGRATION-FROM-HERMES.md  MIGRATION-FROM-LEGACY-GATEWAY.md  MIGRATION-FROM-OPENCLAW.md  README.md  SELF-HOST-HARDENING.md  api-stability.md  api.md  architecture.md  automation.md  boundaries.md  build-a-harness.md  build-a-recipe.md  changelog.md  channels.md  checkpoints.md  cli-commands.md  cli.md  coding-verification.md  common-tasks.md  config-reference.md  configuration.md  contracts.md  customization.md  default-off-gates.md  deployment.md  desktop-app.md  env-reference.md  evidence-contracts.md  evidence-types-reference.md  evidence.md  faq.md  first-party-packs.md  general-automation.md  getting-started.md  glossary.md  harness-schema.md  harnesses.md  hook-points-reference.md  hook-points.md  hooks.md  (+35 more)
evals/: __init__.py
internal/: README.md
magi_agent/: ARCHITECTURE.md  app.py  facades.py  main.py
memory/: .compaction-state.json  ROOT.md
openmagi_core_agent/: ARCHITECTURE.md  app.py  facades.py  main.py
scripts/: build-web-dashboard.sh  check_dashboard_chunks_resolvable.sh  check_env_reference.sh  check_flag_reads.py  check_module_map.sh  check_naming.sh  check_web_dashboard_freshness.sh  check_xfail_budget.py  dogfood-full-on.env  generate_env_reference.py  generate_module_map.py  naming_baseline.tsv  research-parity-eval.mjs  research-parity-eval.test.mjs  sync-design-system.sh
src/: Agent.backgroundDelivery.test.ts  Agent.discipline.test.ts  Agent.routing.test.ts  Agent.superpowers.test.ts  Agent.telegram.test.ts  Agent.tools.test.ts  Agent.ts  Session.budget.test.ts  Session.close.test.ts  Session.goalLoop.test.ts  Session.inject.test.ts  Session.permissionMode.test.ts  Session.terminalFallback.test.ts  Session.ts  Tool.ts  Turn.cachePrompt.test.ts  Turn.interrupt.test.ts  Turn.retry.test.ts  Turn.routing.test.ts  Turn.stopReason.test.ts  Turn.ts  bootstrap.test.ts  bootstrap.ts  branding.test.ts  index.ts
test/: BrandingCleanup.test.ts  DesktopApp.test.ts  DockerCompose.test.ts  Dockerfile.test.ts  ReadmeContract.test.ts
tests/: ci_quarantine.txt  conftest.py  runtime_issuance_support.py  test_active_sessions.py  test_active_turn.py  test_active_turn_registry.py  test_activity_boundary_idempotency_contract.py  test_addenda_channel_runtime_boundary.py  test_addenda_debug_discipline_boundary.py  test_addenda_extension_boundary.py  test_addenda_knowledge_provider_boundary.py  test_addenda_output_artifact_registry_boundary.py  test_addenda_slash_control_boundary.py  test_addenda_structured_output_boundary.py  test_adk_callback_adapter.py  test_adk_error_projection_redaction.py  test_adk_eval_contract_golden_fixtures.py  test_adk_memory_lifecycle_callback_metadata.py  test_adk_policy_boundary.py  test_adk_runner_lifecycle_events.py  test_adk_session_memory_artifact_boundaries.py  test_adk_tool_adapter.py  test_adk_tool_concurrency_integration.py  test_agent_methodology_contract_golden_fixtures.py  test_agent_mode_tool_delta.py  test_all_network_tools_manifest_backed.py  test_allowed_tools_arg.py  test_allowed_tools_consumption.py  test_ambient_substance_gate_u2.py  test_answer_policy.py  test_answer_verifier.py  test_answer_verifier_audit_default.py  test_answer_verifier_checks.py  test_anthropic_cache_model.py  test_api_canary_verification_ladder.py  test_app_api_routes.py  test_app_missions_routes.py  test_app_session_transcript_wiring.py  test_approval_receipts_contract.py  test_artifact_channel_delivery_contract_golden_fixtures.py  (+1076 more)
(+5519 files in other folders)
