[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "magi-agent"
version = "0.1.29"
description = "Open Magi agent runtime and CLI for personal AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.136.1",
  "google-adk==1.33.0",
  "httpx==0.28.1",
  "litellm>=1.74.0",
  "lxml>=6.0",
  "markdownify==1.2.2",
  "pydantic==2.13.4",
  "python-docx>=1.1",
  "uvicorn==0.47.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==9.0.3",
  "ruff==0.15.16",
  "mypy==2.1.0",
]
cli = [
  "textual==8.2.7",
  "rich==15.0.0",
  "rapidfuzz==3.14.5",
  "typer==0.26.4",
]
bench = [
    "swebench>=3.0.0",
    "datasets>=2.19.0",
    "docker>=7.1.0",
]
composio = [
  "composio==0.13.1",
]
# Optional: required only when a Claude/Anthropic model is run through ADK
# (google.adk.models.Claude / magi_agent.adk_bridge.anthropic_cache_model).
# Imported lazily so environments without it are unaffected. ADK itself
# requires anthropic>=0.43 ("Claude models require the anthropic package").
anthropic = [
  "anthropic==0.105.2",
]
# Compatibility extra. Provider-capable installs are now the default because
# the runtime uses ADK LiteLlm as the common model path.
providers = []
# Optional file & multimodal attachment tools (MAGI_FILE_TOOLS_ENABLED=true).
# DOCX/HWPX authoring dependencies are base runtime dependencies because
# DocumentWrite is a first-party local authoring surface.
# Install with: uv sync --extra files
files = [
  "openpyxl>=3.1",
  "pypdf>=4.0",
  "python-pptx>=1.0",
]
# Optional audio transcription provider (MAGI_ASR_PROVIDER=openai_whisper).
# Install with: uv sync --extra audio
audio = [
  "openai>=1.0",
]
# Optional video frame extraction (VideoFrames tool, MAGI_VIDEO_DOWNLOAD_ENABLED=true).
# yt-dlp handles YouTube/URL download; ffmpeg-python is a Python wrapper around the
# system ffmpeg binary (ffmpeg must also be installed separately).
# Install with: uv sync --extra video
video = [
  "yt-dlp>=2024.1.0",
  "ffmpeg-python>=0.2.0",
]
# Optional: autonomous vision browser tool (MAGI_BROWSER_TOOL_ENABLED=true).
# Install with: uv sync --extra browser  &&  uv run playwright install chromium
# Imported lazily inside magi_agent/browser/autonomous/engine.py so environments
# without it are unaffected. API surface recorded against browser-use 0.11.x in
# magi_agent/browser/autonomous/_api_notes.py; floor is pinned to match it.
browser = [
  "browser-use>=0.11.13,<0.12",
  "playwright>=1.45.0",
]
# Optional WAF-bypass web fetch provider (InsaneFetchProvider). Uses curl_cffi
# browser impersonation (TLS/JA3 fingerprint) to bypass fingerprinting WAFs.
# Lazily imported and default-OFF; install with: uv sync --extra waf
waf = [
  "curl_cffi>=0.7",
]

[project.scripts]
magi-agent = "magi_agent.main:main"
magi = "magi_agent.cli.__main__:main"

[tool.setuptools.packages.find]
include = ["magi_agent*"]
# Standalone benchmark harnesses (gaia / taubench / multibug) have zero runtime
# consumers — they exist only for offline eval runs. Keep them in the repo but
# drop them from the published wheel to shrink install size / attack surface.
# The legal benchmark (magi_agent.benchmarks.legalbench + the legal_eval module)
# stays: it is imported at runtime by `magi legal-eval` (cli/app.py) and the
# first_party legal recipe, so it must remain importable from the wheel.
exclude = [
  "magi_agent.benchmarks.gaia*",
  "magi_agent.benchmarks.taubench*",
  "magi_agent.benchmarks.multibug*",
]

[tool.setuptools.package-data]
magi_agent = [
  "discovery/templates/*.json",
  "skills/bundled/*/SKILL.md",
  "skills/bundled/superpowers/*/SKILL.md",
  "skills/bundled/superpowers/*/*.md",
  "skills/bundled/superpowers/*/references/*.md",
  "skills/bundled/superpowers/*/scripts/*",
  "skills/bundled/superpowers/*/examples/*",
  "skills/bundled/superpowers/*/*.dot",
  "tools/document_write/hwpx_runtime/references/*.md",
  "tools/document_write/hwpx_runtime/scripts/*",
  "tools/document_write/hwpx_runtime/scripts/office/*",
  "tools/document_write/hwpx_runtime/templates/base/*",
  "tools/document_write/hwpx_runtime/templates/base/Contents/*",
  "tools/document_write/hwpx_runtime/templates/base/META-INF/*",
  "tools/document_write/hwpx_runtime/templates/base/Preview/*",
  "tools/document_write/hwpx_runtime/templates/gonmun/*",
  "tools/document_write/hwpx_runtime/templates/minutes/*",
  "tools/document_write/hwpx_runtime/templates/proposal/*",
  "tools/document_write/hwpx_runtime/templates/report/*",
  # Bundled slash-command prompt templates loaded via importlib.resources at
  # import time (cli/commands/bundled.py). Without this they are missing from
  # the wheel/bottle and the TUI crashes on launch with FileNotFoundError.
  "cli/commands/templates/*.txt",
  # Restored static web dashboard bundle (apps/web static export). Served at
  # /dashboard by `magi-agent serve`; must ship in the wheel/bottle so a clean
  # install exposes the UI with no Node runtime. See transport/web_dashboard.py.
  "web_dashboard/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests", "magi_agent/cli/tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# CI ratchet stage 1: fatal errors only (syntax errors, undefined names).
# Widen (e.g. add "E", "F", "I") once the baseline is clean.
select = ["E9", "F63", "F7", "F82"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "silent"
